--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         Chat App
-        <button id="increment">+1</button>
+        <form id="message-form">
+            <input placeholder="message">
+            <button>Send</button>
+        </form>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
