--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <body>
         Chat App
         <form id="message-form">
-            <input placeholder="message">
+            <input name="message" placeholder="message">
             <button>Send</button>
         </form>
         <script src="/socket.io/socket.io.js"></script>
