--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     </head>
     <body>
         Chat App
+        
         <form id="message-form">
-            <input name="message" placeholder="message">
+            <input name="message" placeholder="Message">
             <button>Send</button>
         </form>
-        <button id="send-location">Send Location</button>
+        <button id="send-location">Send location</button>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
